@@ -1,14 +1,23 @@
 package em.board.service;
 
+import em.board.domain.Article;
+import em.board.domain.ArticleComment;
+import em.board.domain.UserAccount;
 import em.board.dto.ArticleCommentDto;
 import em.board.repository.ArticleCommentRepository;
 import em.board.repository.ArticleRepository;
+import em.board.repository.UserAccountRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import javax.persistence.EntityNotFoundException;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Stream;
 
+@Slf4j
 @RequiredArgsConstructor
 @Transactional
 @Service
@@ -16,19 +25,40 @@ public class ArticleCommentService {
 
     private final ArticleRepository articleRepository;
     private final ArticleCommentRepository articleCommentRepository;
+    private final UserAccountRepository userAccountRepository;
 
     @Transactional(readOnly = true)
     public List<ArticleCommentDto> searchArticleComments(Long articleId) {
-        return List.of();
+        Stream<ArticleCommentDto> stream = articleCommentRepository.findByArticle_Id(articleId)
+                .stream()
+                .map(ArticleCommentDto::from);
+        ArticleCommentDto[] array = stream.toArray(ArticleCommentDto[]::new);
+        List<ArticleCommentDto> list = Arrays.asList(array);
+
+        return list;
     }
 
     public void saveArticleComment(ArticleCommentDto dto) {
+        try {
+            Article article = articleRepository.getById(dto.getArticleId());
+            UserAccount userAccount = userAccountRepository.getById(dto.getUserAccountDto().getUserId());
+            articleCommentRepository.save(dto.toEntity(article, userAccount));
+        } catch (EntityNotFoundException e) {
+            log.warn("댓글 저장 실패. 댓글 작성에 필요한 정보를 찾을 수 없습니다 - {}", e.getLocalizedMessage());
+        }
     }
 
     public void updateArticleComment(ArticleCommentDto dto) {
+        try {
+            ArticleComment articleComment = articleCommentRepository.getById(dto.getId());
+            if (dto.getContent() != null) { articleComment.setContent(dto.getContent()); }
+        } catch (EntityNotFoundException e) {
+            log.warn("댓글 업데이트 실패. 댓글을 찾을 수 없습니다 - dto: {}", dto);
+        }
     }
 
     public void deleteArticleComment(Long articleCommentId) {
+        articleCommentRepository.deleteById(articleCommentId);
     }
 
 }
